# bytechat

./: .gitignore  README.md
bytechat-cpp/: CMakeLists.txt  CMakePresets.json  main.cpp
bytechat-go/: README.md  chat.go  go.mod  main.go
bytechat-go/client/: client.go  go.mod
bytechat-go/cmd/client/: main.go
bytechat-go/cmd/server/: connection.go  hub.go  main.go  room.go
bytechat-go/server/: go.mod  server.go
